--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.0.0",
+    "react-motion": "^0.5.2",
+    "react-router-transition": "^2.1.0",
     "react-scripts": "4.0.3",
     "react-vertical-timeline-component": "^3.5.2",
     "sass": "^1.43.3",
