--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "react-dom": "^17.0.2",
     "react-motion": "^0.5.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^6.3.0",
     "react-router-transition": "^2.1.0",
     "react-scripts": "4.0.3",
     "react-vertical-timeline-component": "^3.5.2",
+    "redux": "^4.1.2",
     "sass": "^1.43.3",
     "web-vitals": "^1.0.1"
   },
@@ -28,11 +29,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "emmet.includeLanguages": {
+    "postcss": "css"
   },
   "browserslist": {
     "production": [
