--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-new-portfolio",
+  "homepage": "./home",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -42,6 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "."
+  }
 }
