--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "homepage": "my-new-portfolio/public",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
